[package]
name = "airflow-esp"
description = "An Airflow Edge Worker for the ESP32-C3 micro controller."
version = "0.0.1"

authors = ["Cedrik Neumann <7921017+m1racoli@users.noreply.github.com>"]
categories = ["embedded", "no-std"]
edition = "2024"
keywords = ["airflow", "embedded", "esp", "esp32c3"]
license-file = "LICENSE"
publish = false
repository = "https://github.com/m1racoli/airflow-esp"
rust-version = "1.89"

[[bin]]
name = "airflow-esp"
path = "./src/bin/main.rs"

[dependencies]
airflow-common = { path = "../airflow-rs/airflow-common", default-features = false, features = [
  "jwt-compact",
] }
airflow-edge-sdk = { path = "../airflow-rs/airflow-edge-sdk", default-features = false }
airflow-task-sdk = { path = "../airflow-rs/airflow-task-sdk", default-features = false, features = [
  "critical-section",
] }
critical-section = "1.2.0"
display-interface = "0.5.0"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-65536"] }
embassy-futures = "0.1.1"
embassy-net = { version = "0.6.0", features = [
  "dhcpv4",
  "dhcpv4-hostname",
  "tcp",
  "udp",
  "dns",
] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embedded-graphics = "0.8.1"
embedded-iconoir = { version = "0.2.3", default-features = false, features = ["16px"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-nal-async = "0.8.0"
esp-alloc = "0.8.0"
esp-backtrace = { version = "0.17.0", features = [
  "esp32c3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }
esp-wifi = { version = "0.15.0", features = [
  "builtin-scheduler",
  "esp-alloc",
  "esp32c3",
  "log-04",
  "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
once_cell = { version = "1", default-features = false, features = ["critical-section"] }
portable-atomic = { version = "1.11.0", default-features = false }
reqwless = { git = "https://github.com/drogue-iot/reqwless.git", rev = "311060f9dcfe065941fa224139786fe3c205e71b", features = [
  "alloc",
  "log",
] }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sntpc = { version = "0.6.0", default-features = false, features = ["embassy-socket"] }
ssd1306 = "0.10.0"
static_cell = { version = "2.1.1" }
static-toml = "1.3.0"
thiserror = { version = "2", default-features = false }
tracing = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x", default-features = false, features = [
  "alloc",
  "portable-atomic",
] }
tracing-core = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x", default-features = false, features = [
  "alloc",
  "portable-atomic",
] }
tracing-subscriber = { git = "https://github.com/tokio-rs/tracing.git", branch = "v0.2.x", default-features = false, features = [
  "alloc",
  "portable-atomic",
  "smallvec",
] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.wokwi]
inherits = "dev"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = []
wokwi = []
stats = ["esp-alloc/internal-heap-stats"]
